--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
 
     <!-- add google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700,900&display=swap" rel="stylesheet" async>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
